Versión personalizada de mi sitio

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="description" content="P谩gina de ejemplo del MOOC de LINUX - UPM.">
     <!--Sustituir por los datos del alumno-->
-    <meta name="author" content="Nombre y Apellido(s)">
+    <meta name="author" content="Diana Mart韓 羖varez">
 
     <!--Sustituir por los datos del alumno-->
-    <title>Nombre y Apellido(s)</title>
+    <title>Diana Mart韓 罫varez</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -17,11 +17,11 @@
   <body>
     <div class="container header-bar">
       <!--Sustituir por los datos del alumno-->
-      <h3>Nombre y Apellido(s) <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.png" align="right"></span></h3>
+      <h3>Diana Mart韓 罫varez <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.png" align="right"></span></h3>
       <p>
         <!--Sustituir por los datos del alumno-->
-        Posici贸n<br>
-        Departamento<br>
+        Desarrollador<br>
+        Desarrollo<br>
         Organizaci贸n
       </p>
       <address>
@@ -41,9 +41,9 @@
       <div class='row'>
         <div class='col-sm-8'>
           <br>
-          <p>Este p谩rrafo contiene una descripci贸n breve del alumno. Se trata de un texto que permite conocer su ocupaci贸n actual y sus principales t铆tulos acad茅micos y/o profesionales.  </p>
+          <p>Mi ocupaci髇 en este momento es realizar la pr醕tica 9 del curso  </p>
           
-          <p>En este segundo p谩rrafo nos centraremos en las capacidades de desarrollo del alumno, de forma que se pueda conocer si sabe programar, en qu茅 lenguajes, qu茅 sistemas operativos conoce y domina, etc. Tambi茅n se pueden mencionar los proyectos que se han desarrollado en GitHub, o cualquier otra informaci贸n que se considere relevante.</p>
+          <p>Y me quedan pocas horas para poder entregarla</p>
 
           <h3>Cursos</h3>
           <table class='table table-striped'>
@@ -55,7 +55,7 @@
 
       <footer class="footer">
         <!--Sustituir por los datos del alumno-->
-        <p>&copy; Nombre y Apellido(s) - 2017</p>
+        <p>&copy; Diana Mart韓 罫varez - 2018</p>
       </footer>
 
     </div>
