Versión personalizada de mi sitio y mejorada

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-
+Ôªø
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="description" content="P√°gina de ejemplo del MOOC de LINUX - UPM.">
     <!--Sustituir por los datos del alumno-->
     <meta name="author" content="Diana MartÌn ¡lvarez">
 
     <!--Sustituir por los datos del alumno-->
-    <title>Diana MartÌn ¡Lvarez</title>
+    <title>Diana Mart√≠n √Ålvarez</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -17,12 +17,12 @@
   <body>
     <div class="container header-bar">
       <!--Sustituir por los datos del alumno-->
-      <h3>Diana MartÌn ¡Lvarez <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.png" align="right"></span></h3>
+      <h3>Diana Mart√≠n √Ålvarez <span><img style="width: 214px; height: 164px;" class='img-circle' alt="Nombre y Apellido(s)" src="img/foto.png" align="right"></span></h3>
       <p>
         <!--Sustituir por los datos del alumno-->
         Desarrollador<br>
         Desarrollo<br>
-        Organizaci√≥n
+        Rollo
       </p>
       <address>
         <!--Sustituir por los datos del alumno-->
@@ -32,16 +32,16 @@
       <!--Sustituir por los datos del alumno-->
       <p><a href="http://twitter.com/usuario" target="blank"><img src="img/twitter-icon.jpg" width=25></a>
       <!--Sustituir por los datos del alumno-->
-      <a href="http://github.com/usuario" target="blank"><img src="img/github-icon.png" width=25></a>
+      <a href="https://github.com/didimae" target="blank"><img src="img/github-icon.png" width=25></a>
       <!--Sustituir por los datos del alumno-->
-      <a href="https://es.linkedin.com/in/usuario" target="blank"><img src="img/linkedin-icon.png" width=25></a>
+      <a href="https://www.linkedin.com/in/diana-mart%C3%ADn-%C3%A1lvarez-24646242/" target="blank"><img src="img/linkedin-icon.png" width=25></a>
     </div>
 
     <div class="container">
       <div class='row'>
         <div class='col-sm-8'>
           <br>
-          <p>Mi ocupaciÛn en este momento es realizar la pr·ctica 9 del curso  </p>
+          <p>Mi ocupaci√≥n en este momento es realizar la pr√°ctica 9 del curso  </p>
           
           <p>Y me quedan pocas horas para poder entregarla</p>
 
@@ -55,7 +55,7 @@
 
       <footer class="footer">
         <!--Sustituir por los datos del alumno-->
-        <p>&copy; Diana MartÌn ¡Lvarez - 2018</p>
+        <p>&copy; Diana Mart√≠n √Ålvarez - 2018</p>
       </footer>
 
     </div>
